@@ -108,7 +108,8 @@ CREATE TABLE ART_DATABASES
 	USERNAME          VARCHAR(25) NOT NULL,
 	PASSWORD          VARCHAR(40) NOT NULL,
 	POOL_TIMEOUT      INTEGER,  
-	TEST_SQL          VARCHAR(60),         
+	TEST_SQL          VARCHAR(60),
+	ACTIVE_STATUS VARCHAR(1),
 	UPDATE_DATE       DATE	
 );
 -- create unique constraints
