@@ -5,6 +5,7 @@ ART 2.5.3
 * Enable multi parameter to act as a chained parameter master
 * Allow chained parameter slave to have default values
 * Modified some user interface elements for ease of use
+* Allow datasources to be disabled
 * Updated cewolf to 1.2.4
 
 ART 2.5.2
